--- a/src/CSS/Home.module.css
+++ b/src/CSS/Home.module.css
@@ -4,6 +4,11 @@
     height:100%;
     /* background:red; */
 }
+.wrapper p {
+    text-align: center;
+    color:white;
+    font-weight: 100;
+}
 
 .bWrap
 {
